--- a/src/SCSS/task.scss
+++ b/src/SCSS/task.scss
@@ -17,7 +17,7 @@
 .loading {
     
     // background-color:rgb(220, 57, 11);
-    display:block;
+    display:inline-block;
     width: 100px;
     height: 80px;
     justify-content: center;
